# slack-github-digest

./: .gitignore  Cargo.toml  README.md  slack-github-config-example.toml
.github/workflows/: master.yml  pull-request.yml  release.yml  rust.yml
src/: github.rs  main.rs  slack.rs
src/queries/: digest.graphql
