[package]
name = "slack-github-digest"
version = "0.1.0"
authors = ["Will Fuqua <wafuqua@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql_client = "0.8.0"
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
toml = "0.5"
chrono = "0.4"
reqwest = { version = "0.10.8", features = ["json", "gzip"] }
tokio = { version = "1.13", features = ["full"] }
failure = "0.1.5"
itertools = "0.8.0"